--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/hotel_experian
+spring.datasource.username=postgres
+spring.datasource.password=lola
+
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.show_sql=trued
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
+
+
+
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.I
 
