--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/hotel_experian
-spring.datasource.username=postgres
-spring.datasource.password=lola
+spring.datasource.url=jdbc:postgresql:${ENDERECO_BANCO}/hotel_experian
+spring.datasource.username=${USUARIO_BANCO}
+spring.datasource.password=${SENHA_BANCO}
 
 
 spring.jpa.hibernate.ddl-auto=update
@@ -11,8 +11,6 @@ spring.jpa.properties.hibernate.show_sql=trued
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
-
-
 
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
